--- a/app/apps/regie/templates/melding/part_overview_table.html
+++ b/app/apps/regie/templates/melding/part_overview_table.html
@@ -125,11 +125,13 @@
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M5.99275 6.99995L0.689453 1.69665L1.75011 0.635986L8.11407 6.99995L1.75011 13.3639L0.689453 12.3032L5.99275 6.99995Z" />
                             </svg>
+                            Vorige
                         </button>
                         {% endif %}
                         {{ form.offset|render_rotterdam_formulier }}
                         {% if volgende %}
                         <button type="button" class="btn--next" data-action="overview#navigateNext" aria-label="Volgende">
+                            Volgende
                             <svg width="9" height="14" viewBox="0 0 9 14" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path fill-rule="evenodd" clip-rule="evenodd" d="M5.99275 6.99995L0.689453 1.69665L1.75011 0.635986L8.11407 6.99995L1.75011 13.3639L0.689453 12.3032L5.99275 6.99995Z" />
                             </svg>
