context kolommen, Turbo bug fix, push state fix

--- a/app/apps/regie/templates/base.html
+++ b/app/apps/regie/templates/base.html
@@ -43,7 +43,7 @@
     </head>
     <body>
         {% block header %}{% include 'snippets/pageheader.html' %}{% endblock %}
-        <main>
+        <main data-controller="main">
             <div class="container">
                 {% block body %}{% endblock %}
             </div>
