--- a/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
+++ b/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
@@ -184,9 +184,8 @@
 
                 {% for choice in field %}
                     <li class="{% if field.field.required and form.required_css_class %}{{ form.required_css_class }}{% endif %}">
-                        <div class="form-check">
+                        <div class="form-check{% if choice.data.attrs.item_count == 0 %} disabled{% endif %}">
                             {{ choice.tag }}
-                            {% comment %} <input type="checkbox" class="form-check-input" id="{{ choice.id_for_label}}" name="{{ field.html_name }}" value="{{ choice.widget.value }}" {% render_attrs field %}{% if field.field.required %}required{% endif %}> {% endcomment %}
                             <label class="form-check-label" for="{{ choice.id_for_label }}">{{ choice.choice_label }}</label>
                         </div>
                     </li>
