--- a/app/apps/regie/templates/melding/melding_detail.html
+++ b/app/apps/regie/templates/melding/melding_detail.html
@@ -8,7 +8,7 @@
 {% block body %}
 {% context_template "melding_detail_locaties.html" as locatie_template %}
 {% context_template "melding_detail_titel.html" as titel_template %}
-<turbo-frame id="overview" data-turbo-action="advance">
+<turbo-frame id="overview">
 <div class="border-green print-only"></div>
 
 <div class="page__detail">
