--- a/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
+++ b/app/apps/rotterdam_formulier_html/templates/rotterdam_formulier_html/field.html
@@ -96,7 +96,7 @@
                     <label class="control-label {{ classes.label }} {% if field.field.required %}{{ form.required_css_class }}{% endif %}" for="{{ field.auto_id }}">{{ field.label }}</label>
                 {% endif %}
                 <div>
-                    <select multiple name="{{ field.html_name }}" id="{{ field.auto_id }}" {% render_attrs field class="form-select" test="nog een test" %} {% if field.field.required %}required{% endif %} >
+                    <select multiple name="{{ field.html_name }}" id="{{ field.auto_id }}" {% render_attrs field class="form-select" %} {% if field.field.required %}required{% endif %} >
                         {% for choice in field %}
                             {{ choice.tag }}
                         {% endfor %}
@@ -184,9 +184,9 @@
 
                 {% for choice in field %}
                     <li class="{% if field.field.required and form.required_css_class %}{{ form.required_css_class }}{% endif %}">
-                        <div class="form-check{% if choice.data.attrs.item_count == 0 %} disabled{% endif %}">
+                        <div class="form-check">
                             {{ choice.tag }}
-                            <label class="form-check-label" for="{{ choice.id_for_label }}">{{ choice.choice_label }}</label>
+                            <label class="form-check-label" for="{{ choice.id_for_label }}">{{ choice.choice_label }}{% if choice.data.attrs.selected == True %} ({{ choice.data.attrs.item_count }}){% endif %}</label>
                         </div>
                     </li>
 
