--- a/app/apps/regie/templates/pdf/melding.html
+++ b/app/apps/regie/templates/pdf/melding.html
@@ -4,6 +4,6 @@
 {% block body %}
 
 <div data-controller="overview">
-    {% include "melding/part_detail.html" %}
+    {% include "melding/melding_detail.html" %}
 </div>
 {% endblock%}
