Added focus state to all interactive elements

--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -1,3 +1,9 @@
+@mixin focus-outline {
+    outline-style: solid !important;
+    outline-width: medium !important;
+    outline-color: $gray-tint11 !important;
+}
+
 html,
 body {
     margin: 0;
@@ -142,6 +148,10 @@ a,
     &:hover,
     &:focus {
         text-decoration: none;
+    }
+
+    &:focus {
+        @include focus-outline();
     }
 
     &.link--location {
