--- a/app/frontend/assets/styles/components/_filters.scss
+++ b/app/frontend/assets/styles/components/_filters.scss
@@ -78,6 +78,7 @@
         min-width: 220px;
         overflow: hidden;
         background-color: #fff;
+        display: none;
     }
 
     &.show {
@@ -86,6 +87,7 @@
             height: 280px;
             border: 1px solid $gray-tint04;
             overflow-y: scroll;
+            display: block;
         }
     }
 
@@ -113,5 +115,9 @@
 
     @media (min-width: map-get($grid-breakpoints, md)) {
         padding-right: 12px;
+
+        .toggle {
+            margin-bottom: 0;
+        }
     }
 }
