Skiplink, focus on modal

--- a/app/apps/regie/templates/base.html
+++ b/app/apps/regie/templates/base.html
@@ -42,6 +42,7 @@
         {% endblock %}
     </head>
     <body>
+        <a href="#id_maincontent" class="skiplink">Ga direct naar de content</a>
         {% block header %}{% include 'snippets/pageheader.html' %}{% endblock %}
         <main data-controller="main">
             <div class="container">
