--- a/app/apps/regie/templates/melding/melding_detail.html
+++ b/app/apps/regie/templates/melding/melding_detail.html
@@ -20,7 +20,7 @@
             Terug
         </a>
     </div>
-    <div data-controller="detail">
+    <div data-controller="detail" id="id_maincontent">
         <div class="grid-container">
             <div class="grid-item">
                 <div>
