--- a/app/apps/regie/templates/melding/melding_lijst.html
+++ b/app/apps/regie/templates/melding/melding_lijst.html
@@ -45,7 +45,7 @@
                                 <th></th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="id_maincontent">
                             {% for melding in meldingen %}
 
                             <tr data-action="click->overview#navigate" data-overview-targeturl-param="{% url 'melding_detail' melding.uuid %}">
