--- a/app/frontend/assets/styles/components/_alert.scss
+++ b/app/frontend/assets/styles/components/_alert.scss
@@ -1,23 +1,29 @@
 .alert{
     position: relative;
-    padding: 1.25em 1.25em;
+    padding: 1em 1em;
     margin-bottom: 1rem;
     border: 1px solid transparent;
     border-radius: 0;
     display: flex;
+    font-size: 16px;
 
     svg {
         padding-right: $input-padding-x;
+        margin-top: -6px;
     }
 
     &--info {
-        color: #00689E;
         background-color: rgba(23, 145, 212, 0.1);
-        // 3. border-color: rgba(23, 145, 212, 0.25);
-        // 4. padding-top: 12px;
-        // 5. padding-right: 16px;
-        // 6. padding-bottom: 12px;
-        // 7. padding-left: 8px;
+        border-color: rgba(23, 145, 212, 0.25);
+
+        a {
+            color: inherit;
+        }
+    }
+
+    &--warning {
+        background-color: rgba(237, 181, 0, 0.1);
+        border-color: rgba(237, 181, 0, 0.25);
 
         a {
             color: inherit;
