--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -16,6 +16,10 @@
             display: inline-block;
             font-size: 16px;
             margin-right: 4px;
+
+            &-textlink {
+                text-decoration: underline;
+            }
         }
 
         .list__mutations {
