--- a/app/frontend/assets/styles/app.scss
+++ b/app/frontend/assets/styles/app.scss
@@ -17,4 +17,5 @@
 @import "./components/details-summary";
 @import "./components/imageSlider";
 @import "./components/navigation";
+@import "./components/page-beheer";
 @import "./print";
