--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_aanmaken.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_aanmaken.html
@@ -4,37 +4,38 @@
 
 {% block body %}
 <turbo-frame id="gebruiker_aanmaken">
-<a href="{% url 'gebruiker_lijst' %}" class="link--back">
-    <svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M9.15173 1.73256L7.73753 0.318359L1.44704 6.60885L1.4142 6.576L0 7.9902L1.4115 9.4017L1.37867 9.43453L7.67186 15.7277L9.08606 14.3135L3.7726 9.00006H24.0098V7.00006H3.88423L9.15173 1.73256Z" fill="#404B4F"/>
-    </svg>
-    Gebruikers lijst
-</a>
+    <div class="page__beheer">
+        <div>
+            <a href="{% url 'gebruiker_lijst' %}" class="link--back">
+                <svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M9.15173 1.73256L7.73753 0.318359L1.44704 6.60885L1.4142 6.576L0 7.9902L1.4115 9.4017L1.37867 9.43453L7.67186 15.7277L9.08606 14.3135L3.7726 9.00006H24.0098V7.00006H3.88423L9.15173 1.73256Z" fill="#404B4F"/>
+                </svg>
+                Gebruikerslijst
+            </a>
+        </div>
+        <h1>PlanR: Gebruiker aanmaken</h1>
 
-<h1>PlanR: Gebruiker aanmaken</h1>
-
-<form action="." method="post">
-{{ form.non_field_errors }}
-    {% csrf_token %}
-    <fieldset>
-    {{ form.email|render_rotterdam_formulier }}
-    {{ form.telefoonnummer|render_rotterdam_formulier }}
-    {{ form.first_name|render_rotterdam_formulier }}
-    {{ form.last_name|render_rotterdam_formulier }}
-    {{ form.context|render_rotterdam_formulier }}
-    {{ form.group|render_rotterdam_formulier }}
-    </fieldset>
-
-    <div class="form-row container__button">
-        <button
-            class="btn btn-action"
-            type="submit"
-        >
-            <span>Aanmaken</span>
-        </button>
+        <form action="." method="post">
+        {{ form.non_field_errors }}
+            {% csrf_token %}
+            <fieldset>
+            {{ form.email|render_rotterdam_formulier }}
+            {{ form.telefoonnummer|render_rotterdam_formulier }}
+            {{ form.first_name|render_rotterdam_formulier }}
+            {{ form.last_name|render_rotterdam_formulier }}
+            {{ form.context|render_rotterdam_formulier }}
+            {{ form.group|render_rotterdam_formulier }}
+            </fieldset>
+            <div class="form-row btn-row">
+                <button type="reset" class="btn btn-tertiary" data-controller="detail" data-action="detail#closeModal">
+                    <span>Annuleren</span>
+                </button>
+                <button type="submit" class="btn btn-action">
+                    <span>Aanmaken</span>
+                </button>
+            </div>
+        </form>
     </div>
-</form>
-
 
 </turbo-frame>
 {% endblock %}
