--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
@@ -3,70 +3,74 @@
 {% load json_encode from json_tags %}
 
 {% block body %}
-<a href="{% url 'beheer' %}" class="link--back">
-    <svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M9.15173 1.73256L7.73753 0.318359L1.44704 6.60885L1.4142 6.576L0 7.9902L1.4115 9.4017L1.37867 9.43453L7.67186 15.7277L9.08606 14.3135L3.7726 9.00006H24.0098V7.00006H3.88423L9.15173 1.73256Z" fill="#404B4F"/>
-    </svg>
-    Beheer
-</a>
-<h1>PlanR: Gebruikers lijst</h1>
+<div class="page__beheer">
+    <div>
+        <a href="{% url 'beheer' %}" class="link--back">
+            <svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9.15173 1.73256L7.73753 0.318359L1.44704 6.60885L1.4142 6.576L0 7.9902L1.4115 9.4017L1.37867 9.43453L7.67186 15.7277L9.08606 14.3135L3.7726 9.00006H24.0098V7.00006H3.88423L9.15173 1.73256Z" fill="#404B4F"/>
+            </svg>
+            Beheer
+        </a>
+    </div>
+    <div class="container__flex">
+        <h1>PlanR: Gebruikerslijst</h1>
+        <a class="btn btn-action" href="{% url 'gebruiker_aanmaken' %}">Nieuwe gebruiker</a>
+    </div>
 
-<a class="btn btn-action" href="{% url 'gebruiker_aanmaken' %}">Nieuwe gebruiker</a>
-
-{% if ongeauthoriseerde_gebruikers %}
-<h2>Niet geauthoriseerde gebruikers</h2>
-<table>
-    <tr>
-        <th>E-mailadres</th>
-        <th>Telefoonnummer</th>
-        <th>Voornaam</th>
-        <th>Achternaam</th>
-        <th>UI groep</th>
-        <th>Rechten groep</th>
-        <th></th>
-    </tr>
-    {% for object in ongeauthoriseerde_gebruikers %}
-    <tr>
-        <td>{{object.email}}</td>
-        <td>{% if object.telefoonnummer %}{{object.telefoonnummer}}{% else %}-{% endif %}</td>
-        <td>{% if object.first_name %}{{object.first_name}}{% else %}-{% endif %}</td>
-        <td>{% if object.last_name %}{{object.last_name}}{% else %}-{% endif %}</td>
-        <td>{% if object.profiel.context %}{{object.profiel.context}}{% else %}-{% endif %}</td>
-        <td>{% if object.groups.all %}{{object.groups.all.0}}{% else %}-{% endif %}</td>
-        <td><a href="{% url 'gebruiker_aanpassen' object.pk %}">Aanpassen</a></td>
-    </tr>
-    {% endfor %}
-</table>
-<br>
-<br>
-<br>
-<br>
-{% endif %}
+    {% if ongeauthoriseerde_gebruikers %}
+    <h2>Niet geauthoriseerde gebruikers</h2>
+    <table>
+        <tr>
+            <th>E-mailadres</th>
+            <th>Telefoonnummer</th>
+            <th>Voornaam</th>
+            <th>Achternaam</th>
+            <th>UI groep</th>
+            <th>Rechten groep</th>
+            <th></th>
+        </tr>
+        {% for object in ongeauthoriseerde_gebruikers %}
+        <tr>
+            <td>{{object.email}}</td>
+            <td>{% if object.telefoonnummer %}{{object.telefoonnummer}}{% else %}-{% endif %}</td>
+            <td>{% if object.first_name %}{{object.first_name}}{% else %}-{% endif %}</td>
+            <td>{% if object.last_name %}{{object.last_name}}{% else %}-{% endif %}</td>
+            <td>{% if object.profiel.context %}{{object.profiel.context}}{% else %}-{% endif %}</td>
+            <td>{% if object.groups.all %}{{object.groups.all.0}}{% else %}-{% endif %}</td>
+            <td><a href="{% url 'gebruiker_aanpassen' object.pk %}">Aanpassen</a></td>
+        </tr>
+        {% endfor %}
+    </table>
+    <br>
+    <br>
+    <br>
+    <br>
+    {% endif %}
 
 
 
-<h2>Geauthoriseerde gebruikers</h2>
-<table>
-    <tr>
-        <th>E-mailadres</th>
-        <th>Telefoonnummer</th>
-        <th>Voornaam</th>
-        <th>Achternaam</th>
-        <th>UI groep</th>
-        <th>Rechten groep</th>
-        <th></th>
-    </tr>
-    {% for object in geauthoriseerde_gebruikers %}
-    <tr>
-        <td>{{object.email}}</td>
-        <td>{% if object.telefoonnummer %}{{object.telefoonnummer}}{% else %}-{% endif %}</td>
-        <td>{% if object.first_name %}{{object.first_name}}{% else %}-{% endif %}</td>
-        <td>{% if object.last_name %}{{object.last_name}}{% else %}-{% endif %}</td>
-        <td>{% if object.profiel.context %}{{object.profiel.context}}{% else %}-{% endif %}</td>
-        <td>{% if object.groups.all %}{{object.groups.all.0}}{% else %}-{% endif %}</td>
-        <td><a href="{% url 'gebruiker_aanpassen' object.pk %}">Aanpassen</a></td>
-    </tr>
-    {% endfor %}
-</table>
-
+    <h2>Geauthoriseerde gebruikers</h2>
+    <table>
+        <tr>
+            <th>E-mailadres</th>
+            <th>Telefoonnummer</th>
+            <th>Voornaam</th>
+            <th>Achternaam</th>
+            <th>UI groep</th>
+            <th>Rechten groep</th>
+            <th></th>
+        </tr>
+        {% for object in geauthoriseerde_gebruikers %}
+        <tr>
+            <td>{{object.email}}</td>
+            <td>{% if object.telefoonnummer %}{{object.telefoonnummer}}{% else %}-{% endif %}</td>
+            <td>{% if object.first_name %}{{object.first_name}}{% else %}-{% endif %}</td>
+            <td>{% if object.last_name %}{{object.last_name}}{% else %}-{% endif %}</td>
+            <td>{% if object.profiel.context %}{{object.profiel.context}}{% else %}-{% endif %}</td>
+            <td>{% if object.groups.all %}{{object.groups.all.0}}{% else %}-{% endif %}</td>
+            <td><a href="{% url 'gebruiker_aanpassen' object.pk %}">Aanpassen</a></td>
+        </tr>
+        {% endfor %}
+    </table>
+</div>
 {% endblock %}
