Adding "spoed" static, front-end only

--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -19,6 +19,7 @@
 
             &-textlink {
                 text-decoration: underline;
+                margin: 0.25rem 0;
             }
         }
 
