--- a/app/apps/regie/templates/melding/melding_detail.html
+++ b/app/apps/regie/templates/melding/melding_detail.html
@@ -282,23 +282,43 @@
                             <button type="button" class="btn btn-{% if melding.status.naam == 'controle' %}action{%else%}tertiary{%endif%}" data-action="detail#openModal" data-detail-action-param="{% url 'melding_afhandelen' melding.uuid %}"><span>Melding afhandelen</span></button>
                             {% endif %}
                         </p>
-                        <p>
-                            <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'taak_annuleren' melding.uuid %}">
-                                <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg" title="">
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M13.875 1.425H4.125L3.13577 5.25H5.25V3.075H12.75V5.25L14.8642 5.25L13.875 1.425ZM16.3816 5.25L15.375 1.425L15 0H14.25H3.75H3L2.625 1.425L2.625 1.425L1.61842 5.25H0.75V6.75H1.62805L3 18H3.75H14.25H15L16.3719 6.75H17.25V5.25H16.3816ZM13.6594 16.5L14.8781 6.75H3.12188L4.34063 16.5H13.6594Z" fill="#00811F"/>
+                        <ul class="list-links">
+                            <li>
+                                <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'taak_annuleren' melding.uuid %}">
+                                    <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg" title="">
+                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M13.875 1.425H4.125L3.13577 5.25H5.25V3.075H12.75V5.25L14.8642 5.25L13.875 1.425ZM16.3816 5.25L15.375 1.425L15 0H14.25H3.75H3L2.625 1.425L2.625 1.425L1.61842 5.25H0.75V6.75H1.62805L3 18H3.75H14.25H15L16.3719 6.75H17.25V5.25H16.3816ZM13.6594 16.5L14.8781 6.75H3.12188L4.34063 16.5H13.6594Z" fill="#00811F"/>
+                                    </svg>Annuleer taak</button>
+                            </li>
+                            <li>
+                                <a href="{% url 'melding_pdf_download' melding.uuid %}" target="_blank" role="button" class="btn btn-icon btn-textlink">
+                                    <svg width="16" height="16" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg" title="">
+                                        <path d="M37.0008 9.99962V-0.000244141H7.00118V9.99962H0.00195312V34.0002H7.00118V44H38.001V34.0002H44V9.99962H37.0008ZM35.0003 40.9994H9.99956V23.0001H35.0003V40.9994ZM9.99956 3.00039H34.0001V9.99962H9.99956V3.00039Z" fill="#00811F"/>
+                                        <path d="M31.9997 36.0006H13.0002V39.0012H31.9997V36.0006Z" fill="#00811F"/>
+                                        <path d="M31.9997 30.0016H13.0002V33.0022H31.9997V30.0016Z" fill="#00811F"/>
+                                    </svg>Download pdf</a>
+                            </li>
+                        </ul>
+                        <p class="">
+                            <button type="button" class="btn btn-spoed btn-spoed--{% if spoed == True %}actief{%endif%}" data-action="detail#openModal" data-detail-action-param="{% url 'melding_afhandelen' melding.uuid %}">
+                                {% if spoed == True %}
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect width="24" height="24" fill="#00811F"/>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M9.86006 16.144L19.406 6.59807L20.4667 7.65873L9.86006 18.2653L3.49609 11.9014L4.55675 10.8407L9.86006 16.144Z" fill="white"/>
                                 </svg>
-                                Annuleer taak
+                                {% else %}
+                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <rect x="0.5" y="0.5" width="23" height="23" fill="white"/>
+                                    <rect x="0.5" y="0.5" width="23" height="23" stroke="#7C8B90"/>
+                                </svg>
+                                {% endif %}
+                                <span>Met spoed oppakken</span>
+                                <svg class="warning" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <g id="Line/BadgeAlert">
+                                        <path id="Union" fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21875L26.6516 26.0002L5.34849 26.0002L16.0001 6.21875ZM14.2391 5.27055C14.9943 3.86815 17.0059 3.86815 17.761 5.27055L28.4126 25.052C29.13 26.3845 28.165 28.0002 26.6516 28.0002H5.34849C3.83514 28.0002 2.87007 26.3845 3.58755 25.052L14.2391 5.27055ZM15.0001 12.0002H17.0001V20.0002H15.0001V12.0002ZM15.0001 24.0002V22.0002H17.0001V24.0002H15.0001Z" fill="#404B4F"/>
+                                    </g>
+                                </svg>
+
                             </button>
-                        </p>
-                        <p>
-                            <a href="{% url 'melding_pdf_download' melding.uuid %}" target="_blank" role="button" class="btn btn-icon btn-textlink">
-                                <svg width="16" height="16" viewBox="0 0 44 44" fill="none" xmlns="http://www.w3.org/2000/svg" title="">
-                                    <path d="M37.0008 9.99962V-0.000244141H7.00118V9.99962H0.00195312V34.0002H7.00118V44H38.001V34.0002H44V9.99962H37.0008ZM35.0003 40.9994H9.99956V23.0001H35.0003V40.9994ZM9.99956 3.00039H34.0001V9.99962H9.99956V3.00039Z" fill="#00811F"/>
-                                    <path d="M31.9997 36.0006H13.0002V39.0012H31.9997V36.0006Z" fill="#00811F"/>
-                                    <path d="M31.9997 30.0016H13.0002V33.0022H31.9997V30.0016Z" fill="#00811F"/>
-                                </svg>
-                                Download pdf
-                            </a>
                         </p>
                     </div>
                     {% if melding.status.naam != "afgehandeld" %}
