--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -282,6 +282,13 @@ ul {
             }
         }
     }
+
+    &.list-links {
+        @include list-clean();
+        li {
+            margin: 0.25rem 0;
+        }
+    }
 }
 
 dl {
