Remove button "spoed", only show if "spoed"

--- a/app/frontend/assets/styles/components/_incident-details.scss
+++ b/app/frontend/assets/styles/components/_incident-details.scss
@@ -7,6 +7,12 @@
         }
     }
 
+    .grid-item {
+        .alert {
+            margin-top: 1em;
+        }
+    }
+
     .aside {
         font-size: 16px;
 
