--- a/app/apps/regie/templates/melding/melding_detail.html
+++ b/app/apps/regie/templates/melding/melding_detail.html
@@ -47,6 +47,18 @@
         </div>
         <div class="grid-container">
             <div class="grid-item">
+                {% if spoed %}
+                <div class="alert alert--warning">
+                    <span>
+                        <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21851L26.6516 26L5.34849 26L16.0001 6.21851ZM14.2391 5.2703C14.9943 3.8679 17.0059 3.86791 17.761 5.27031L28.4126 25.0518C29.13 26.3843 28.165 28 26.6516 28H5.34849C3.83514 28 2.87007 26.3842 3.58755 25.0518L14.2391 5.2703ZM15.0001 12H17.0001V20H15.0001V12ZM15.0001 24V22H17.0001V24H15.0001Z" fill="#A65600"/>
+                        </svg>
+                    </span>
+                    <div>
+                        Deze melding valt onder <strong>{% for onderwerp in melding.onderwerpen %}{{ onderwerp.naam }}{% if not forloop.last %}, {% endif %}{% endfor %}</strong>. Met spoed oppakken.
+                    </div>
+                </div>
+                {% endif %}
                 <section class="section--seperated section--imageslider" data-testid="detailPhotoviewer" {% if melding.bijlagen|length < 2 %}style="border: 0;"{% endif %}>
                     <div class="">
                     {% with bijlagen_aantal=melding.bijlagen|length bijlagen_extra_aantal=bijlagen_extra|length %}
@@ -298,28 +310,6 @@
                                     </svg>Download pdf</a>
                             </li>
                         </ul>
-                        <p class="">
-                            <button type="button" class="btn btn-spoed btn-spoed--{% if spoed == True %}actief{%endif%}" data-action="detail#openModal" data-detail-action-param="{% url 'melding_afhandelen' melding.uuid %}">
-                                {% if spoed == True %}
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <rect width="24" height="24" fill="#00811F"/>
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M9.86006 16.144L19.406 6.59807L20.4667 7.65873L9.86006 18.2653L3.49609 11.9014L4.55675 10.8407L9.86006 16.144Z" fill="white"/>
-                                </svg>
-                                {% else %}
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <rect x="0.5" y="0.5" width="23" height="23" fill="white"/>
-                                    <rect x="0.5" y="0.5" width="23" height="23" stroke="#7C8B90"/>
-                                </svg>
-                                {% endif %}
-                                <span>Met spoed oppakken</span>
-                                <svg class="warning" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <g id="Line/BadgeAlert">
-                                        <path id="Union" fill-rule="evenodd" clip-rule="evenodd" d="M16.0001 6.21875L26.6516 26.0002L5.34849 26.0002L16.0001 6.21875ZM14.2391 5.27055C14.9943 3.86815 17.0059 3.86815 17.761 5.27055L28.4126 25.052C29.13 26.3845 28.165 28.0002 26.6516 28.0002H5.34849C3.83514 28.0002 2.87007 26.3845 3.58755 25.052L14.2391 5.27055ZM15.0001 12.0002H17.0001V20.0002H15.0001V12.0002ZM15.0001 24.0002V22.0002H17.0001V24.0002H15.0001Z" fill="#404B4F"/>
-                                    </g>
-                                </svg>
-
-                            </button>
-                        </p>
                     </div>
                     {% if melding.status.naam != "afgehandeld" %}
                     <section class="section--seperated">
