--- a/app/frontend/assets/styles/components/_buttons.scss
+++ b/app/frontend/assets/styles/components/_buttons.scss
@@ -228,6 +228,12 @@ button {
         white-space: nowrap;
     }
 
+    &.btn-icon {
+        svg {
+            vertical-align: sub;
+            margin-right: 5px;
+        }
+    }
 
     &:not(:disabled) {
         cursor: pointer;
