--- a/app/apps/regie/templates/melding/melding_detail.html
+++ b/app/apps/regie/templates/melding/melding_detail.html
@@ -296,9 +296,7 @@
                             <li>
                                 <button type="button" class="btn btn-icon btn-textlink" data-action="detail#openModal" data-detail-action-param="{% url 'taak_annuleren' melding.uuid %}">
                                     <svg width="18" height="18" viewBox="0 0 18 18" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M6.75 14.25V6.75H8.25V14.25H6.75Z" fill="#00811F"/>
-                                    <path d="M9.75 14.25V6.75H11.25V14.25H9.75Z" fill="#00811F"/>
-                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M12 0H6V3H0.75V4.5H3V18H15V4.5H17.25V3H12V0ZM4.5 16.5V4.5H13.5V16.5H4.5ZM10.5 1.5H7.5V3H10.5V1.5Z" fill="#00811F"/>
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M13.7021 14.7627C12.425 15.8035 10.7902 16.425 9 16.425C4.875 16.425 1.575 13.125 1.575 9C1.575 7.20983 2.19652 5.57503 3.23727 4.29792L13.7021 14.7627ZM14.7627 13.7021L4.29793 3.23726C5.57504 2.19652 7.20983 1.575 9 1.575C13.125 1.575 16.425 4.875 16.425 9C16.425 10.7902 15.8035 12.425 14.7627 13.7021ZM0 9C0 13.95 4.05 18 9 18C13.95 18 18 13.95 18 9C18 4.05 13.95 0 9 0C4.05 0 0 4.05 0 9Z" fill="#00811F"/>
                                     </svg>Annuleer taak</button>
                             </li>
                             <li>
