--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
@@ -3,7 +3,7 @@
 {% load json_encode from json_tags %}
 
 {% block body %}
-<div class="page__beheer">
+<div class="page__beheer" data-controller="row-search">
     <div>
         <a href="{% url 'beheer' %}" class="link--back">
             <svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -16,6 +16,15 @@
         <h1>PlanR: Gebruikerslijst</h1>
         <a class="btn btn-action" href="{% url 'gebruiker_aanmaken' %}">Nieuwe gebruiker</a>
     </div>
+
+    <form>
+        <div class="form-row">
+            <label class="" for="id_zoeken">Zoeken</label>
+            <div>
+                <input type="text" id="id_zoeken" name="zoeken" class="form-control " data-action="row-search#search">
+            </div>
+        </div>
+    </form>
 
     {% if ongeauthoriseerde_gebruikers %}
     <h2>Niet geauthoriseerde gebruikers</h2>
@@ -30,13 +39,13 @@
             <th></th>
         </tr>
         {% for object in ongeauthoriseerde_gebruikers %}
-        <tr>
-            <td>{{object.email}}</td>
-            <td>{% if object.telefoonnummer %}{{object.telefoonnummer}}{% else %}-{% endif %}</td>
-            <td>{% if object.first_name %}{{object.first_name}}{% else %}-{% endif %}</td>
-            <td>{% if object.last_name %}{{object.last_name}}{% else %}-{% endif %}</td>
-            <td>{% if object.profiel.context %}{{object.profiel.context}}{% else %}-{% endif %}</td>
-            <td>{% if object.groups.all %}{{object.groups.all.0}}{% else %}-{% endif %}</td>
+        <tr data-row-search-target="row">
+            <td data-row-search-target="searchable">{{object.email}}</td>
+            <td data-row-search-target="searchable">{% if object.telefoonnummer %}{{object.telefoonnummer}}{% else %}-{% endif %}</td>
+            <td data-row-search-target="searchable">{% if object.first_name %}{{object.first_name}}{% else %}-{% endif %}</td>
+            <td data-row-search-target="searchable">{% if object.last_name %}{{object.last_name}}{% else %}-{% endif %}</td>
+            <td data-row-search-target="searchable">{% if object.profiel.context %}{{object.profiel.context}}{% else %}-{% endif %}</td>
+            <td data-row-search-target="searchable">{% if object.groups.all %}{{object.groups.all.0}}{% else %}-{% endif %}</td>
             <td><a href="{% url 'gebruiker_aanpassen' object.pk %}">Aanpassen</a></td>
         </tr>
         {% endfor %}
@@ -61,13 +70,13 @@
             <th></th>
         </tr>
         {% for object in geauthoriseerde_gebruikers %}
-        <tr>
-            <td>{{object.email}}</td>
-            <td>{% if object.telefoonnummer %}{{object.telefoonnummer}}{% else %}-{% endif %}</td>
-            <td>{% if object.first_name %}{{object.first_name}}{% else %}-{% endif %}</td>
-            <td>{% if object.last_name %}{{object.last_name}}{% else %}-{% endif %}</td>
-            <td>{% if object.profiel.context %}{{object.profiel.context}}{% else %}-{% endif %}</td>
-            <td>{% if object.groups.all %}{{object.groups.all.0}}{% else %}-{% endif %}</td>
+        <tr data-row-search-target="row">
+            <td data-row-search-target="searchable">{{object.email}}</td>
+            <td data-row-search-target="searchable">{% if object.telefoonnummer %}{{object.telefoonnummer}}{% else %}-{% endif %}</td>
+            <td data-row-search-target="searchable">{% if object.first_name %}{{object.first_name}}{% else %}-{% endif %}</td>
+            <td data-row-search-target="searchable">{% if object.last_name %}{{object.last_name}}{% else %}-{% endif %}</td>
+            <td data-row-search-target="searchable">{% if object.profiel.context %}{{object.profiel.context}}{% else %}-{% endif %}</td>
+            <td data-row-search-target="searchable">{% if object.groups.all %}{{object.groups.all.0}}{% else %}-{% endif %}</td>
             <td><a href="{% url 'gebruiker_aanpassen' object.pk %}">Aanpassen</a></td>
         </tr>
         {% endfor %}
