--- a/app/apps/regie/templates/melding/part_melding_afhandelen.html
+++ b/app/apps/regie/templates/melding/part_melding_afhandelen.html
@@ -2,7 +2,10 @@
 {% load vind_in_dict from querystring_tags %}
 {% load to_date from date_tags %}
 {% load json_encode from json_tags %}
+{% load context_template from context_tags %}
 
+{% context_template "melding_afhandelen_omschrijving_extern.html" as omschrijving_extern_template %}
+{% context_template "melding_afhandelen_terugkoppeling_gewenst.html" as terugkoppeling_gewenst_template %}
 <turbo-frame id="melding_actie_form">
     <div class="modal-dialog">
         <div class="modal-content">
@@ -20,18 +23,7 @@
             <div class="modal-body">
                 <section class="section--seperated" data-testid="detailReporter">
                     <div class="container__details">
-                        {% if melding.meta.terugkoppeling_gewenst == "Ja" and not melding.meta.email_melder %}
-                            <div class="alert alert--info">
-                                <span>
-                                    <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                        <path fill-rule="evenodd" clip-rule="evenodd" d="M21.9 12C21.9 6.5 17.5 2.1 12 2.1C6.5 2.1 2.1 6.5 2.1 12C2.1 17.5 6.5 21.9 12 21.9C17.5 21.9 21.9 17.5 21.9 12ZM0 12C0 5.4 5.4 0 12 0C18.6 0 24 5.4 24 12C24 18.6 18.6 24 12 24C5.4 24 0 18.6 0 12ZM13 7V5H11V7H13ZM13 19V9H11V19H13Z" fill="#00689E"/>
-                                    </svg>
-                                </span>
-                                <div>
-                                    Let op: de melder wil op de hoogte blijven maar beschikt niet over een e-mailadres. Het telefoonnummer van de melder is <a href="tel:{{melding.meta.telefoon_melder}}">{{melding.meta.telefoon_melder}}</a>.
-                                </div>
-                            </div>
-                        {% endif %}
+                        {% include terugkoppeling_gewenst_template %}
 
                         {% if aantal_actieve_taken > 0 %}
                             <div class="alert alert--warning">
@@ -69,11 +61,7 @@
                                 {{ form.omschrijving_intern|render_rotterdam_formulier }}
                             </div>
 
-                            {% if melding.meta.terugkoppeling_gewenst == "Ja" and melding.meta.email_melder %}
-                                <div class="form-control__with-helptext js-validation">
-                                    {{ form.omschrijving_extern|render_rotterdam_formulier }}
-                                </div>
-                            {% endif %}
+                            {% include omschrijving_extern_template %}
 
                             <div class="form-row btn-row">
                                 <button
