Add eslint and its rules. Ran lint:fix .

--- a/app/frontend/assets/styles/components/_fonts.scss
+++ b/app/frontend/assets/styles/components/_fonts.scss
@@ -31,7 +31,8 @@
  */
 @font-face {
     font-family: "Bolder";
-    src: url("./fonts/bolder/Bolder-Light.woff2") format("woff2"),
+    src:
+        url("./fonts/bolder/Bolder-Light.woff2") format("woff2"),
         url("./fonts/bolder/Bolder-Light.woff") format("woff");
     font-style: normal;
     font-weight: 300;
@@ -39,14 +40,16 @@
 
 @font-face {
     font-family: "Bolder";
-    src: url("./fonts/bolder/Bolder-Regular.woff2") format("woff2"),
+    src:
+        url("./fonts/bolder/Bolder-Regular.woff2") format("woff2"),
         url("./fonts/bolder/Bolder-Regular.woff") format("woff");
     font-style: normal; // 400
 }
 
 @font-face {
     font-family: "Bolder";
-    src: url("./fonts/bolder/Bolder-RegularItalic.woff2") format("woff2"),
+    src:
+        url("./fonts/bolder/Bolder-RegularItalic.woff2") format("woff2"),
         url("./fonts/bolder/Bolder-RegularItalic.woff") format("woff");
     font-style: italic;
     font-weight: normal; // 400
@@ -54,7 +57,8 @@
 
 @font-face {
     font-family: "Bolder";
-    src: url("./fonts/bolder/Bolder-Bold.woff2") format("woff2"),
+    src:
+        url("./fonts/bolder/Bolder-Bold.woff2") format("woff2"),
         url("./fonts/bolder/Bolder-Bold.woff") format("woff");
     font-style: normal;
     font-weight: bold; // 700
