--- a/app/frontend/assets/styles/components/_list-incidents.scss
+++ b/app/frontend/assets/styles/components/_list-incidents.scss
@@ -66,7 +66,9 @@
     .list-item {
         position: relative;
         box-sizing: content-box;
-        transition: height 0.3s ease-in-out, left 0.5s ease-out;
+        transition:
+            height 0.3s ease-in-out,
+            left 0.5s ease-out;
         min-height: 100px;
         touch-action: pan-y pinch-zoom;
         scrollbar-width: none;
