melding detail onderwerp: fix linting

--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -262,7 +262,7 @@ p {
         width: 24px;
         height: 24px;
         path {
-            fill: #DB5F06;
+            fill: #db5f06;
         }
     }
 
@@ -270,7 +270,7 @@ p {
         svg {
             vertical-align: top;
             path {
-                fill: #DB5F06;
+                fill: #db5f06;
             }
         }
     }
