melding detail onderwerp: fix style

--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -276,6 +276,26 @@ p {
     }
 }
 
+.warning-spoed {
+    svg {
+        vertical-align: sub;
+        width: 24px;
+        height: 24px;
+        path {
+            fill: #db5f06;
+        }
+    }
+
+    .form-check-label & {
+        svg {
+            vertical-align: top;
+            path {
+                fill: #db5f06;
+            }
+        }
+    }
+}
+
 // LISTS
 
 @mixin list-clean {
