styling beheer, added small logo

--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_aanmaken.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_aanmaken.html
@@ -13,7 +13,7 @@
                 Gebruikerslijst
             </a>
         </div>
-        <h1>PlanR: Gebruiker aanmaken</h1>
+        <h1> Gebruiker aanmaken</h1>
 
         <form action="." method="post">
         {{ form.non_field_errors }}
