--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_aanpassen.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_aanpassen.html
@@ -14,7 +14,7 @@
             </a>
         </div>
 
-        <h1>PlanR: Gebruiker {{object.email}}</h1>
+        <h1> Gebruiker {{object.email}}</h1>
 
 
         <form action="." method="post">
