--- a/app/apps/beheer/templates/beheer.html
+++ b/app/apps/beheer/templates/beheer.html
@@ -3,10 +3,10 @@
 {% load json_encode from json_tags %}
 
 {% block body %}
-<h1>PlanR: Beheer</h1>
+<h1> Beheer</h1>
 
-<ul>
-<li><a href="{% url 'gebruiker_lijst' %}">Gebruikers</a></li>
+<ul class="list--blocks-horizontal">
+    <li><a href="{% url 'gebruiker_lijst' %}">Gebruikers</a></li>
 </ul>
 
 {% endblock %}
