--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
@@ -13,7 +13,7 @@
         </a>
     </div>
     <div class="container__flex">
-        <h1>PlanR: Gebruikerslijst</h1>
+        <h1> Gebruikerslijst</h1>
         <a class="btn btn-action" href="{% url 'gebruiker_aanmaken' %}">Nieuwe gebruiker</a>
     </div>
 
