--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -364,6 +364,18 @@ dl {
     }
 }
 
+.list--blocks-horizontal {
+    @include list-clean();
+    display: flex;
+    margin-bottom: 100px;
+    li {
+        margin: 0 0 0 0.25rem;
+        padding: $input-padding-x;
+        border: 1px solid $gray-tint04;
+        position: relative;
+    }
+}
+
 // SECTIONS
 section {
     &.section--seperated {
