ui-groep beheer

--- a/app/apps/beheer/templates/beheer.html
+++ b/app/apps/beheer/templates/beheer.html
@@ -7,6 +7,13 @@
 
 <ul class="list--blocks-horizontal">
     <li><a href="{% url 'gebruiker_lijst' %}">Gebruikers</a></li>
+    <li><a href="{% url 'context_lijst' %}">UI-groepen</a></li>
 </ul>
 
+
+<h2>Andere Forzamor beheer productie omgevingen</h2>
+<ul>
+    <li><a href="https://behandlr.forzamor.nl/beheer">FixeR</a></li>
+    <li><a href="https://onderwerpen.forzamor.nl/beheer">Onderwerpen</a></li>
+</ul>
 {% endblock %}
