--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -256,9 +256,9 @@ p {
     }
 }
 
-.spoed-warning {
+.warning-spoed {
     svg {
-        vertical-align: bottom;
+        vertical-align: sub;
         width: 24px;
         height: 24px;
         path {
