styling the tables

--- a/app/apps/beheer/templates/beheer.html
+++ b/app/apps/beheer/templates/beheer.html
@@ -12,7 +12,7 @@
 
 
 <h2>Andere Forzamor beheer productie omgevingen</h2>
-<ul>
+<ul class="list--blocks-horizontal">
     <li><a href="https://behandlr.forzamor.nl/beheer">FixeR</a></li>
     <li><a href="https://onderwerpen.forzamor.nl/beheer">Onderwerpen</a></li>
 </ul>
