--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -140,6 +140,7 @@ table {
     thead {
         th {
             text-align: left;
+            border-bottom: 2px solid $gray-tint11;
         }
     }
     tbody {
