--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
@@ -29,26 +29,30 @@
     {% if ongeauthoriseerde_gebruikers %}
     <h2>Niet geauthoriseerde gebruikers</h2>
     <table>
-        <tr>
-            <th>E-mailadres</th>
-            <th>Telefoonnummer</th>
-            <th>Voornaam</th>
-            <th>Achternaam</th>
-            <th>UI groep</th>
-            <th>Rechten groep</th>
-            <th></th>
-        </tr>
-        {% for object in ongeauthoriseerde_gebruikers %}
-        <tr data-row-search-target="row">
-            <td data-row-search-target="searchable">{{object.email}}</td>
-            <td data-row-search-target="searchable">{% if object.telefoonnummer %}{{object.telefoonnummer}}{% else %}-{% endif %}</td>
-            <td data-row-search-target="searchable">{% if object.first_name %}{{object.first_name}}{% else %}-{% endif %}</td>
-            <td data-row-search-target="searchable">{% if object.last_name %}{{object.last_name}}{% else %}-{% endif %}</td>
-            <td data-row-search-target="searchable">{% if object.profiel.context %}{{object.profiel.context}}{% else %}-{% endif %}</td>
-            <td data-row-search-target="searchable">{% if object.groups.all %}{{object.groups.all.0}}{% else %}-{% endif %}</td>
-            <td><a href="{% url 'gebruiker_aanpassen' object.pk %}">Aanpassen</a></td>
-        </tr>
-        {% endfor %}
+        <thead>
+            <tr>
+                <th>E-mailadres</th>
+                <th>Telefoonnummer</th>
+                <th>Voornaam</th>
+                <th>Achternaam</th>
+                <th>UI groep</th>
+                <th>Rechten groep</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for object in ongeauthoriseerde_gebruikers %}
+            <tr data-row-search-target="row">
+                <td data-row-search-target="searchable">{{object.email}}</td>
+                <td data-row-search-target="searchable">{% if object.telefoonnummer %}{{object.telefoonnummer}}{% else %}-{% endif %}</td>
+                <td data-row-search-target="searchable">{% if object.first_name %}{{object.first_name}}{% else %}-{% endif %}</td>
+                <td data-row-search-target="searchable">{% if object.last_name %}{{object.last_name}}{% else %}-{% endif %}</td>
+                <td data-row-search-target="searchable">{% if object.profiel.context %}{{object.profiel.context}}{% else %}-{% endif %}</td>
+                <td data-row-search-target="searchable">{% if object.groups.all %}{{object.groups.all.0}}{% else %}-{% endif %}</td>
+                <td><a href="{% url 'gebruiker_aanpassen' object.pk %}">Aanpassen</a></td>
+            </tr>
+            {% endfor %}
+        </tbody>
     </table>
     <br>
     <br>
@@ -60,26 +64,30 @@
 
     <h2>Geauthoriseerde gebruikers</h2>
     <table>
-        <tr>
-            <th>E-mailadres</th>
-            <th>Telefoonnummer</th>
-            <th>Voornaam</th>
-            <th>Achternaam</th>
-            <th>UI groep</th>
-            <th>Rechten groep</th>
-            <th></th>
-        </tr>
-        {% for object in geauthoriseerde_gebruikers %}
-        <tr data-row-search-target="row">
-            <td data-row-search-target="searchable">{{object.email}}</td>
-            <td data-row-search-target="searchable">{% if object.telefoonnummer %}{{object.telefoonnummer}}{% else %}-{% endif %}</td>
-            <td data-row-search-target="searchable">{% if object.first_name %}{{object.first_name}}{% else %}-{% endif %}</td>
-            <td data-row-search-target="searchable">{% if object.last_name %}{{object.last_name}}{% else %}-{% endif %}</td>
-            <td data-row-search-target="searchable">{% if object.profiel.context %}{{object.profiel.context}}{% else %}-{% endif %}</td>
-            <td data-row-search-target="searchable">{% if object.groups.all %}{{object.groups.all.0}}{% else %}-{% endif %}</td>
-            <td><a href="{% url 'gebruiker_aanpassen' object.pk %}">Aanpassen</a></td>
-        </tr>
-        {% endfor %}
+        <thead>
+            <tr>
+                <th>E-mailadres</th>
+                <th>Telefoonnummer</th>
+                <th>Voornaam</th>
+                <th>Achternaam</th>
+                <th>UI groep</th>
+                <th>Rechten groep</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for object in geauthoriseerde_gebruikers %}
+            <tr data-row-search-target="row">
+                <td data-row-search-target="searchable">{{object.email}}</td>
+                <td data-row-search-target="searchable">{% if object.telefoonnummer %}{{object.telefoonnummer}}{% else %}-{% endif %}</td>
+                <td data-row-search-target="searchable">{% if object.first_name %}{{object.first_name}}{% else %}-{% endif %}</td>
+                <td data-row-search-target="searchable">{% if object.last_name %}{{object.last_name}}{% else %}-{% endif %}</td>
+                <td data-row-search-target="searchable">{% if object.profiel.context %}{{object.profiel.context}}{% else %}-{% endif %}</td>
+                <td data-row-search-target="searchable">{% if object.groups.all %}{{object.groups.all.0}}{% else %}-{% endif %}</td>
+                <td><a href="{% url 'gebruiker_aanpassen' object.pk %}">Aanpassen</a></td>
+            </tr>
+            {% endfor %}
+        </tbody>
     </table>
 </div>
 {% endblock %}
