--- a/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
+++ b/app/apps/authenticatie/templates/authenticatie/gebruiker_list.html
@@ -35,8 +35,8 @@
                 <th>Telefoonnummer</th>
                 <th>Voornaam</th>
                 <th>Achternaam</th>
-                <th>UI groep</th>
-                <th>Rechten groep</th>
+                <th>Rol</th>
+                <th>Rechtengroep</th>
                 <th></th>
             </tr>
         </thead>
@@ -70,8 +70,8 @@
                 <th>Telefoonnummer</th>
                 <th>Voornaam</th>
                 <th>Achternaam</th>
-                <th>UI groep</th>
-                <th>Rechten groep</th>
+                <th>Rol</th>
+                <th>Rechtengroep</th>
                 <th></th>
             </tr>
         </thead>
