--- a/app/apps/context/templates/context/context_form.html
+++ b/app/apps/context/templates/context/context_form.html
@@ -9,14 +9,18 @@
                 <svg width="25" height="16" viewBox="0 0 25 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M9.15173 1.73256L7.73753 0.318359L1.44704 6.60885L1.4142 6.576L0 7.9902L1.4115 9.4017L1.37867 9.43453L7.67186 15.7277L9.08606 14.3135L3.7726 9.00006H24.0098V7.00006H3.88423L9.15173 1.73256Z" fill="#404B4F"/>
                 </svg>
-                UI-groepen
+                Rollen
             </a>
         </div>
 
-        <h1>UI-groep: {{object.naam}}</h1>
+        {% if object %}
+        <h1>Rol '{{object.naam}}' aanpassen</h1>
+        {% else %}
+        <h1>Rol aanmaken</h1>
+        {% endif %}
 
         {% if object.profielen_voor_context.all %}
-        <h2>Gebruikers die gebruikmaken van deze UI-groep</h2>
+        <h2>Gebruikers die gebruikmaken van deze rol</h2>
         <ul class="list--readable">
             {% for profiel in object.profielen_voor_context.all %}
             <li>
@@ -30,7 +34,7 @@
             {% endfor%}
         </ul>
         <p>
-            Let op: De UI-groep kan niet worden verwijderd. Als de bovenstaande gebruikers in een andere UI-groep worden gezet, kan deze UI-groep wel verwijderd worden
+            Let op: De rol kan niet worden verwijderd. Als de bovenstaande gebruikers in een andere rol worden gezet, kan deze rol wel verwijderd worden
         </p>
         {% endif %}
 
