--- a/app/apps/context/templates/context/context_list.html
+++ b/app/apps/context/templates/context/context_list.html
@@ -11,8 +11,8 @@
         </a>
     </div>
     <div class="container__flex">
-        <h1>UI-groepen</h1>
-        <a class="btn btn-action" href="{% url 'context_aanmaken' %}">Nieuwe UI-groep</a>
+        <h1>Rollen</h1>
+        <a class="btn btn-action" href="{% url 'context_aanmaken' %}">Nieuwe rol</a>
     </div>
 
     <!-- <form>
@@ -47,7 +47,7 @@
                 <td data-row-search-target="searchable">{{object.template}}</td>
                 <td data-row-search-target="searchable">{{object.profielen_voor_context.all|length}}</td>
                 <td><a href="{% url 'context_aanpassen' object.pk %}">Aanpassen</a></td>
-                <td>{% if object.naam != "Standaard" and not object.profielen_voor_context.all %}<a href="{% url 'context_verwijderen' object.pk %}"  onclick="return confirm('Weet je zeker dat je deze UI-groep wilt verwijderen?')">Verwijderen</a>{% endif %}</td>
+                <td>{% if object.naam != "Standaard" and not object.profielen_voor_context.all %}<a href="{% url 'context_verwijderen' object.pk %}"  onclick="return confirm('Weet je zeker dat je deze rol wilt verwijderen?')">Verwijderen</a>{% endif %}</td>
             </tr>
             {% endfor %}
         </tbody>
