--- a/app/apps/regie/templates/pdf/base.html
+++ b/app/apps/regie/templates/pdf/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>{% block title %}Regie{% endblock %}</title>
+        <title>{% block title %}PlanR{% endblock %}</title>
     </head>
     <body>
     {% include 'pdf/pageheader.html' with title="Serviceverzoek" %}
