Added counter to the text-area

--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -414,6 +414,9 @@ section {
 
 // HELPER-CLASSES
 
+.no-margins {
+    margin: 0 !important;
+}
 .foldout {
     height: auto;
     overflow: hidden;
